--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
     <link rel="stylesheet" href="style.css" />
     <link rel="stylesheet" href="queries.css" />
-    <title>Bankist</title>
+    <title>Unlimited bank</title>
   </head>
   <body>
     <!-- TOP NAVIGATION -->
